# SnPlatform

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pr-check.yml
docs/: CMakeLists.txt  Doxyfile.in
platform/: CMakeLists.txt
platform/include/snplatform/: api.h  defines.h  platform.h  snplatform.h
platform/src/: CMakeLists.txt
platform/src/arch/: CMakeLists.txt
platform/src/arch/amd64/: CMakeLists.txt  platform.asm  platform.c  platform.def
platform/src/arch/arm64/: CMakeLists.txt  platform.asm  platform.c
platform/src/nix/: platform.c
platform/src/win32/: platform.c
test/: CMakeLists.txt  test.c
